// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts should not render View full statistics link on public pages for anonymous user 1`] = `
<div
  className="citationCounts columns is-gapless is-marginless is-multiline"
>
  <div
    className="column is-narrow-tablet is-12-mobile citationIcons"
  >
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
      source="wos"
      title="Full citation in Web of science will open in a new window"
    />
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
      source="scopus"
      title="Full citation in Scopus will open in a new window"
    />
    <CitationCountView
      count={1}
      link="http://www.altmetric.com/details.php?citation_id=12345"
      source="altmetric"
      title="Full citation in Altmetric will open in a new window"
    />
    <CitationCountView
      count={1}
      link="https://scholar.google.com/scholar?q=intitle:[id]This%20is%20test%20title"
      source="google"
      title="Full citation in Google scholar will open in a new window"
    />
    <OpenAccessIcon
      embargoDate={null}
      isOpenAccess={false}
      showEmbargoText={false}
    />
  </div>
  <div
    className="column is-narrow"
  />
  <div
    className="column is-hidden-mobile"
  />
</div>
`;

exports[`CitationCounts should render component with a mock record metrics 1`] = `
<div
  className="citationCounts columns is-gapless is-marginless is-multiline"
>
  <div
    className="column is-narrow-tablet is-12-mobile citationIcons"
  >
    <CitationCountView
      count={1}
      link="http://www.altmetric.com/details.php?citation_id=23535331"
      source="altmetric"
      title="Full citation in Altmetric will open in a new window"
    />
    <CitationCountView
      count={null}
      link="https://scholar.google.com/scholar?q=intitle:[id]ENA/VASP%20proteins%20regulate%20exocytosis%20by%20mediating%20myosin%20VI-dependent%20recruitment%20of%20secretory%20granules%20to%20the%20cortical%20actin%20network"
      source="google"
      title="Full citation in Google scholar will open in a new window"
    />
    <OpenAccessIcon
      embargoDate={null}
      isOpenAccess={false}
      showEmbargoText={false}
    />
  </div>
  <div
    className="column is-narrow"
  />
  <div
    className="column is-hidden-mobile"
  />
</div>
`;

exports[`CitationCounts should render component with all metrics 1`] = `
<div
  className="citationCounts columns is-gapless is-marginless is-multiline"
>
  <div
    className="column is-narrow-tablet is-12-mobile citationIcons"
  >
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=12345&SrcAuth=uqueensland"
      source="wos"
      title="Full citation in Web of science will open in a new window"
    />
    <CitationCountView
      count={1}
      link="http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=12345&origin=inward"
      source="scopus"
      title="Full citation in Scopus will open in a new window"
    />
    <CitationCountView
      count={1}
      link="http://www.altmetric.com/details.php?citation_id=12345"
      source="altmetric"
      title="Full citation in Altmetric will open in a new window"
    />
    <CitationCountView
      count={1}
      link="https://scholar.google.com/scholar?q=intitle:[id]This%20is%20test%20title"
      source="google"
      title="Full citation in Google scholar will open in a new window"
    />
    <OpenAccessIcon
      embargoDate={null}
      isOpenAccess={false}
      showEmbargoText={false}
    />
  </div>
  <div
    className="column is-narrow"
  >
    <ExternalLink
      className=""
      href="https://app.library.uq.edu.au/#/authors/view/pid:111"
      openInNewIcon={true}
      rel="noopener noreferrer"
      target="_blank"
      title="This is test title"
    >
      View full statistics
    </ExternalLink>
  </div>
  <div
    className="column is-hidden-mobile"
  />
</div>
`;

exports[`CitationCounts should render component with no metrics 1`] = `
<div
  className="citationCounts columns is-gapless is-marginless is-multiline"
>
  <div
    className="column is-narrow-tablet is-12-mobile citationIcons"
  >
    <OpenAccessIcon
      embargoDate={null}
      isOpenAccess={false}
      showEmbargoText={false}
    />
  </div>
  <div
    className="column is-narrow"
  />
  <div
    className="column is-hidden-mobile"
  />
</div>
`;
